# uber-demand-prediction

./: .gitignore  Makefile  README.md  app.py  dockerfile  dvc.yaml  main.py  promote_model.py  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci_cd.yaml
deploy/scripts/: start_docker.sh
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Creating_Historical_Data.ipynb  EDA-demand-prediction.ipynb  Model-Selection.ipynb  Training-Baseline-Model.ipynb  breaking-newyork-into-region.ipynb  removing-outliers.ipynb
test/: test_model_perfomance.py
tests/: test_model_registry.py
uber_demand_predication/: __init__.py  dataset.py  features.py  plots.py
uber_demand_predication/features/: extract_features.py
uber_demand_predication/modeling/: predict.py  train.py
uber_demand_predication/models/: evaluate.py  register_model.py
